nginx-example/20-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx-example
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
