nginx-example/30-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-example
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
